@@ -34,10 +34,13 @@ nfdump - _optional_, for importing Cisco binary NetFlow dumps
 ## Usage
 
 1. Import log files into database by any combination of the following methods:
-   1. Palo Alto logs: `import_paloalto.py <file>`. The [paloalto syslog](https://www.paloaltonetworks.com/documentation/61/pan-os/pan-os/reports-and-logging/syslog-field-descriptions.html) format is expected.
-   2. nfdumps: `import_nfdump.py <file>` Binary files from **nfcapd** are expected. nfdump must be installed.
+   1. Palo Alto logs: `python import_paloalto.py <file>`. The [paloalto syslog](https://www.paloaltonetworks.com/documentation/61/pan-os/pan-os/reports-and-logging/syslog-field-descriptions.html) format is expected.
+   2. nfdumps: `python import_nfdump.py <file>` Binary files from **nfcapd** are expected. nfdump must be installed.
+   3. Cisco ASA logs: `python import_asa.py <file>`.  Thanks to Emre for contributing. 
+   4. AWS VPC Flow logs: `python import_aws.py <file>`. Thanks to Emre for contributing. [VPC log spec](http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/flow-logs.html#flow-log-records)  
 
    Import from all files before going to step 2
+
 2. Run the preprocessing script `python preprocess.py` to analyze and organize the data
 
 3. Start the server locally by running: `python server.py`
